--- a/Homework_2/css/style.css
+++ b/Homework_2/css/style.css
@@ -31,9 +31,9 @@ body {
 
 .menu_item >a {
 	display: block;
-	font-family: Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	text-decoration: none;
-	font-size: 15px;
+	font-size: 14px;
 	color: white;
 	line-height: 39px;
 }
@@ -87,20 +87,21 @@ body {
 .sidebar_text {
 	display: block;
 	padding-left: 24px;
-	font-family: Arial sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	color: #656363;
 	text-decoration: none;
-	font-size: 14px;
+	font-size: 12px;
 	line-height: 39.5px;
 }
 
 .sidebar_list:hover {
+	background-color: #f9f9f9;
+	}
+	
+.sidebar_text:hover {
+	font-family: 'Open Sans', sans-serif;
 	padding-left: 50px;
-}
-.sidebar_list:hover{
-	font-family: Arial sans-serif;
-	background-color: #f9f9f9
-	color: black;
+    color: black;
 }
 
              /*CONTENT*/
@@ -122,9 +123,9 @@ body {
 }
 
 .content_text {
-	font-family: Arial sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	color: black;
-	font-size: 14px;
+	font-size: 13px;
 	line-height: 21px;
 }
 /* FOOTER*/
@@ -159,8 +160,8 @@ body {
 .footer_text3,
 .footer_text4,
 .footer_text5 {
-	font-size: 15px;
-	font-family: Arial sans-serif; 
+	font-size: 14px;
+	font-family: 'Open Sans', sans-serif; 
 	color: #656363;
 	text-decoration: none;
 	line-height: 37px;
