--- a/Homework_4/css/style.css
+++ b/Homework_4/css/style.css
@@ -13,27 +13,32 @@ body {
 
 .header	{
 height: 177px;
-
 }
+
 .logo 	{
 	width: 315px;
 	float: left;
 }
+
 .contacts {
 	float: right;
 	margin: 10px 35px 30px;
 }
+
 .contacts>h2 {
 	font-family: Tahoma;
 	font-size: 12px;
 	font-weight: bold;
 	color: #128aa7;
+	margin-bottom: 6px;
 }
+
 .contacts>h3 {
 	font-family: Tahoma;
 	font-size: 12px;
 	color: #128aa7;
 }
+
 .countries 	{
 	float: right;
 	clear: right;
@@ -41,13 +46,12 @@ height: 177px;
 	height: 64px;
 	margin: 6px 35px;
 }
+
 .clearfix:after {
 content: '';
 clear: both;
 display: block;
-
 }
-
 
 .flags>a {
 	float: right;
@@ -58,6 +62,7 @@ display: block;
 	font-family: Tahoma;
 	font-size: 10px;
 }
+
 .photo {
 	width: 1000px;
 	height: 237px;
@@ -65,28 +70,32 @@ display: block;
     border-top: 1px solid #128aa7;
 	border-bottom: 1px solid #138aa7;
 }
+
 .content {
 	margin: 0 auto;
 	position:relative;
 	width: 1000px;
 }
+
 .main_menu 	{
 	height: 27px;
 	width: 1000px;
 	background: #353535;
 	border-bottom: 1px solid black;
 	box-shadow: 0px 1px 1px 1px #555555;
-
 }
+
 ul {
 	display: block;
 }
+
 ul:after {
 	display: block;
     content: ' ';
     clear: both;
     float: none;
 }
+
 ul.menu > li {
     float: left;
     position: relative;
@@ -94,6 +103,7 @@ ul.menu > li {
     width: 142px;
     text-align: center;
 }
+
 ul.menu > li > a {
     display: block;
     padding: 6px;
@@ -105,7 +115,14 @@ ul.menu > li > a {
 }
 ul.menu > li > a:hover {
     background-color: #353535;
- }
+}
+
+.menu>li>a>i {
+ 	font-family: Tahoma;
+ 	font-size: 8px;
+ 	line-height: 15px;
+ 	vertical-align: middle;
+}
 
 ul.submenu {
     display: none;
@@ -115,9 +132,11 @@ ul.submenu {
     left: 0;
     background-color: white;
 }
+
 ul.submenu > li {
     display: block;
 }
+
 ul.submenu > li > a {
     display: block;
     padding: 8px;
@@ -127,9 +146,9 @@ ul.submenu > li > a {
     background-color: #343434;
     text-decoration: none;
 }
+
 ul.submenu > li > a:hover {
     text-decoration: none;
-
 }
 
 ul.menu > li:hover > ul.submenu {
@@ -138,6 +157,7 @@ ul.menu > li:hover > ul.submenu {
     border-top: 1px solid black;
     box-shadow: 0px 2px 2px 2px grey;
 }
+
 .inform {
 	width: 210px;
 	height:554px;
@@ -154,6 +174,7 @@ ul.menu > li:hover > ul.submenu {
 	text-align: center;
 	line-height: 25px;
 }
+
 .inform>p {
 	font-family: tahoma;
 	font-size: 14px;
@@ -161,6 +182,7 @@ ul.menu > li:hover > ul.submenu {
 	text-align: center;
 	line-height: 25px;
 }
+
 .news {
 	width: 210px;
 	height: 554px;
@@ -168,6 +190,7 @@ ul.menu > li:hover > ul.submenu {
     float: right;
 	background: #edeef0;
 }
+
 .news>h1 {
 	font-family: Tahoma;
 	font-size: 18px;
@@ -176,6 +199,7 @@ ul.menu > li:hover > ul.submenu {
 	text-align: center;
 	line-height: 25px;
 }
+
 .news>p {
 	font-family: tahoma;
 	font-size: 14px;
@@ -183,6 +207,7 @@ ul.menu > li:hover > ul.submenu {
 	text-align: center;
 	line-height: 25px;
 }
+
 .footer {
 	width: 1000px;
 	margin: 0 auto;
@@ -191,5 +216,4 @@ ul.menu > li:hover > ul.submenu {
 	font-size: 12px;
 	text-align: center;
 	color: white;
-
 }
